[gd_scene load_steps=27 format=2]

[ext_resource path="res://addons/github-integration/scripts/Repo.gd" type="Script" id=1]
[ext_resource path="res://addons/github-integration/resources/themes/GitHubTheme-Dark.tres" type="Theme" id=2]
[ext_resource path="res://addons/github-integration/scenes/RedBtn.tscn" type="PackedScene" id=3]
[ext_resource path="res://addons/github-integration/icons/arrow-right.png" type="Texture" id=4]
[ext_resource path="res://addons/github-integration/icons/arrow-down.png" type="Texture" id=5]
[ext_resource path="res://addons/github-integration/icons/arrow-left.svg" type="Texture" id=6]
[ext_resource path="res://addons/github-integration/resources/styles/ContentesBG-white.tres" type="StyleBox" id=7]
[ext_resource path="res://addons/github-integration/resources/styles/ContentesBG-dark.tres" type="StyleBox" id=8]
[ext_resource path="res://addons/github-integration/resources/styles/Branch-black.tres" type="StyleBox" id=9]
[ext_resource path="res://addons/github-integration/resources/styles/Repohead-black.tres" type="StyleBox" id=10]

[sub_resource type="StyleBoxEmpty" id=2]
content_margin_top = 4.0

[sub_resource type="StyleBoxEmpty" id=3]
content_margin_left = 2.0
content_margin_right = 2.0
content_margin_top = 4.0

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0, 0, 0, 0.0784314 )

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0, 0, 0, 0.117647 )

[sub_resource type="StyleBoxEmpty" id=14]

[sub_resource type="StyleBoxEmpty" id=15]

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 0.6, 0.6, 0.6, 0.0392157 )

[sub_resource type="StyleBoxEmpty" id=17]

[sub_resource type="StyleBoxEmpty" id=18]

[sub_resource type="StyleBoxEmpty" id=19]

[node name="Repo" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_clip_content = true
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Repository" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_right = -16.0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RepoInfos" type="PanelContainer" parent="Repository"]
margin_right = 992.0
margin_bottom = 64.0
custom_styles/panel = ExtResource( 10 )

[node name="RepoInfosContainer" type="HBoxContainer" parent="Repository/RepoInfos"]
margin_top = 10.0
margin_right = 992.0
margin_bottom = 54.0

[node name="close" type="TextureButton" parent="Repository/RepoInfos/RepoInfosContainer"]
modulate = Color( 0.27451, 0.262745, 0.266667, 1 )
margin_right = 25.0
margin_bottom = 44.0
rect_min_size = Vector2( 25, 0 )
texture_normal = ExtResource( 6 )
expand = true
stretch_mode = 3

[node name="RepoInfos" type="VBoxContainer" parent="Repository/RepoInfos/RepoInfosContainer"]
margin_left = 29.0
margin_right = 992.0
margin_bottom = 44.0
size_flags_horizontal = 3
custom_constants/separation = 0

[node name="repo_infos" type="HBoxContainer" parent="Repository/RepoInfos/RepoInfosContainer/RepoInfos"]
margin_right = 963.0
margin_bottom = 22.0
custom_constants/separation = 0

[node name="repo_icon" type="TextureRect" parent="Repository/RepoInfos/RepoInfosContainer/RepoInfos/repo_infos"]
modulate = Color( 0.0745098, 0.423529, 0.843137, 1 )
margin_right = 16.0
margin_bottom = 22.0
rect_min_size = Vector2( 16, 16 )
size_flags_vertical = 5
stretch_mode = 4
__meta__ = {
"_edit_lock_": true
}

[node name="repo_owner" type="Label" parent="Repository/RepoInfos/RepoInfosContainer/RepoInfos/repo_infos"]
margin_left = 16.0
margin_right = 55.0
margin_bottom = 22.0
size_flags_vertical = 1
custom_styles/normal = SubResource( 2 )
custom_colors/font_color = Color( 0.0745098, 0.423529, 0.843137, 1 )
text = "owner"

[node name="slash" type="Label" parent="Repository/RepoInfos/RepoInfosContainer/RepoInfos/repo_infos"]
margin_left = 55.0
margin_right = 64.0
margin_bottom = 22.0
size_flags_vertical = 1
custom_styles/normal = SubResource( 3 )
custom_colors/font_color = Color( 0.0745098, 0.423529, 0.843137, 1 )
text = "/"
align = 1

[node name="repo_name" type="LinkButton" parent="Repository/RepoInfos/RepoInfosContainer/RepoInfos/repo_infos"]
margin_left = 64.0
margin_top = 4.0
margin_right = 100.0
margin_bottom = 18.0
size_flags_vertical = 4
custom_colors/font_color = Color( 0.0745098, 0.423529, 0.843137, 1 )
text = "name"

[node name="private_icon" type="TextureRect" parent="Repository/RepoInfos/RepoInfosContainer/RepoInfos/repo_infos"]
visible = false
margin_left = 120.0
margin_right = 136.0
margin_bottom = 22.0
rect_min_size = Vector2( 16, 16 )
size_flags_vertical = 5
stretch_mode = 4
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="forked_icon" type="TextureRect" parent="Repository/RepoInfos/RepoInfosContainer/RepoInfos/repo_infos"]
visible = false
margin_left = 120.0
margin_right = 136.0
margin_bottom = 22.0
rect_min_size = Vector2( 16, 16 )
size_flags_vertical = 5
stretch_mode = 4
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="watch_values" type="HBoxContainer" parent="Repository/RepoInfos/RepoInfosContainer/RepoInfos/repo_infos"]
visible = false
margin_left = 502.0
margin_right = 552.0
margin_bottom = 14.0
size_flags_horizontal = 10
size_flags_vertical = 0
custom_constants/separation = 0

[node name="watch_icon" type="TextureRect" parent="Repository/RepoInfos/RepoInfosContainer/RepoInfos/repo_infos/watch_values"]
margin_bottom = 14.0
stretch_mode = 6

[node name="text" type="Label" parent="Repository/RepoInfos/RepoInfosContainer/RepoInfos/repo_infos/watch_values"]
margin_right = 40.0
margin_bottom = 14.0
size_flags_vertical = 1
text = "Watch"
align = 2

[node name="watch" type="Label" parent="Repository/RepoInfos/RepoInfosContainer/RepoInfos/repo_infos/watch_values"]
margin_left = 40.0
margin_right = 40.0
margin_bottom = 14.0
size_flags_vertical = 1
custom_colors/font_color = Color( 0.0156863, 0.894118, 0.0705882, 1 )

[node name="VSeparator" type="VSeparator" parent="Repository/RepoInfos/RepoInfosContainer/RepoInfos/repo_infos/watch_values"]
margin_left = 40.0
margin_right = 50.0
margin_bottom = 14.0
rect_min_size = Vector2( 10, 0 )

[node name="star_values" type="HBoxContainer" parent="Repository/RepoInfos/RepoInfosContainer/RepoInfos/repo_infos"]
margin_left = 870.0
margin_right = 920.0
margin_bottom = 22.0
size_flags_horizontal = 10
size_flags_vertical = 0
custom_constants/separation = 0

[node name="star_icon" type="TextureRect" parent="Repository/RepoInfos/RepoInfosContainer/RepoInfos/repo_infos/star_values"]
modulate = Color( 0.27451, 0.262745, 0.266667, 1 )
margin_bottom = 22.0
stretch_mode = 6

[node name="text" type="Label" parent="Repository/RepoInfos/RepoInfosContainer/RepoInfos/repo_infos/star_values"]
margin_right = 32.0
margin_bottom = 22.0
size_flags_vertical = 1
text = "Star"
align = 2

[node name="star" type="Label" parent="Repository/RepoInfos/RepoInfosContainer/RepoInfos/repo_infos/star_values"]
margin_left = 32.0
margin_right = 40.0
margin_bottom = 22.0
size_flags_vertical = 1
custom_colors/font_color = Color( 0.0156863, 0.894118, 0.0705882, 1 )

[node name="VSeparator2" type="VSeparator" parent="Repository/RepoInfos/RepoInfosContainer/RepoInfos/repo_infos/star_values"]
margin_left = 40.0
margin_right = 50.0
margin_bottom = 22.0
rect_min_size = Vector2( 10, 0 )

[node name="fork_values" type="HBoxContainer" parent="Repository/RepoInfos/RepoInfosContainer/RepoInfos/repo_infos"]
margin_left = 920.0
margin_right = 963.0
margin_bottom = 22.0
size_flags_horizontal = 9
size_flags_vertical = 0
custom_constants/separation = 0

[node name="fork_icon" type="TextureRect" parent="Repository/RepoInfos/RepoInfosContainer/RepoInfos/repo_infos/fork_values"]
modulate = Color( 0.27451, 0.262745, 0.266667, 1 )
margin_bottom = 22.0
stretch_mode = 6

[node name="text" type="Label" parent="Repository/RepoInfos/RepoInfosContainer/RepoInfos/repo_infos/fork_values"]
margin_right = 35.0
margin_bottom = 22.0
size_flags_vertical = 1
text = "Fork"
align = 2

[node name="fork" type="Label" parent="Repository/RepoInfos/RepoInfosContainer/RepoInfos/repo_infos/fork_values"]
margin_left = 35.0
margin_right = 43.0
margin_bottom = 22.0
size_flags_vertical = 1
custom_colors/font_color = Color( 0.0156863, 0.894118, 0.0705882, 1 )

[node name="description" type="Label" parent="Repository/RepoInfos/RepoInfosContainer/RepoInfos"]
margin_top = 22.0
margin_right = 963.0
margin_bottom = 44.0
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "No description"
autowrap = true

[node name="HSeparator8" type="HSeparator" parent="Repository"]
margin_top = 64.0
margin_right = 992.0
margin_bottom = 69.0
custom_styles/separator = SubResource( 4 )
custom_constants/separation = 5

[node name="BranchInfo" type="PanelContainer" parent="Repository"]
margin_top = 69.0
margin_right = 992.0
margin_bottom = 119.0
custom_styles/panel = ExtResource( 9 )

[node name="branch" type="HBoxContainer" parent="Repository/BranchInfo"]
margin_left = 5.0
margin_top = 10.0
margin_right = 987.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="Label" type="Label" parent="Repository/BranchInfo/branch"]
margin_top = 4.0
margin_right = 56.0
margin_bottom = 26.0
text = "Branch:"

[node name="branch2" type="OptionButton" parent="Repository/BranchInfo/branch"]
margin_left = 60.0
margin_right = 96.0
margin_bottom = 30.0
size_flags_vertical = 4

[node name="VSeparator2" type="VSeparator" parent="Repository/BranchInfo/branch"]
margin_left = 100.0
margin_right = 110.0
margin_bottom = 30.0
rect_min_size = Vector2( 10, 0 )
custom_styles/separator = SubResource( 6 )

[node name="new_branchBtn" type="Button" parent="Repository/BranchInfo/branch"]
margin_left = 114.0
margin_right = 210.0
margin_bottom = 30.0
text = "New Branch"

[node name="VSeparator3" type="VSeparator" parent="Repository/BranchInfo/branch"]
margin_left = 214.0
margin_right = 224.0
margin_bottom = 30.0
rect_min_size = Vector2( 10, 0 )
custom_styles/separator = SubResource( 6 )

[node name="pull_btn" type="Button" parent="Repository/BranchInfo/branch"]
margin_left = 228.0
margin_right = 382.0
margin_bottom = 30.0
text = "Pull from this Branch"

[node name="git_lfs" type="Button" parent="Repository/BranchInfo/branch"]
margin_left = 386.0
margin_right = 586.0
margin_bottom = 30.0
hint_tooltip = "Will be enabled in the future"
disabled = true
text = "Setup Git LFS [Experimental]"

[node name="HBoxContainer6" type="HBoxContainer" parent="Repository/BranchInfo/branch"]
margin_left = 791.0
margin_top = 4.0
margin_right = 982.0
margin_bottom = 26.0
size_flags_horizontal = 10
size_flags_vertical = 4
custom_constants/separation = 0
alignment = 2
__meta__ = {
"_edit_lock_": true
}

[node name="Label2" type="Label" parent="Repository/BranchInfo/branch/HBoxContainer6"]
margin_right = 106.0
margin_bottom = 22.0
size_flags_vertical = 0
text = "Default Branch:"

[node name="default_branch" type="Label" parent="Repository/BranchInfo/branch/HBoxContainer6"]
margin_left = 106.0
margin_right = 191.0
margin_bottom = 22.0
size_flags_horizontal = 3
size_flags_vertical = 0
custom_colors/font_color = Color( 0.184314, 0.909804, 0.486275, 1 )
text = "aaaaaaaaaaa"

[node name="contents" type="Tree" parent="Repository"]
margin_top = 119.0
margin_right = 992.0
margin_bottom = 562.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_icons/arrow = ExtResource( 4 )
custom_icons/arrow_collapsed = ExtResource( 5 )
custom_styles/custom_button_pressed = SubResource( 7 )
custom_styles/title_button_normal = SubResource( 8 )
custom_styles/custom_button = SubResource( 9 )
custom_styles/cursor = SubResource( 10 )
custom_styles/title_button_hover = SubResource( 11 )
custom_styles/selected_focus = SubResource( 12 )
custom_styles/bg_focus = ExtResource( 7 )
custom_styles/custom_button_hover = SubResource( 14 )
custom_styles/button_pressed = SubResource( 15 )
custom_styles/cursor_unfocused = SubResource( 16 )
custom_styles/selected = SubResource( 17 )
custom_styles/bg = ExtResource( 8 )
custom_styles/title_button_pressed = SubResource( 18 )
custom_constants/draw_guides = 1
custom_constants/draw_relationship_lines = 1
hide_root = true
select_mode = 2

[node name="HSeparator9" type="HSeparator" parent="Repository"]
margin_top = 562.0
margin_right = 992.0
margin_bottom = 566.0
rect_min_size = Vector2( 0, 4 )
custom_styles/separator = SubResource( 4 )

[node name="repos_buttons" type="HBoxContainer" parent="Repository"]
margin_top = 566.0
margin_right = 992.0
margin_bottom = 596.0
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 8
custom_constants/separation = 10
alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="Repository/repos_buttons"]
margin_right = 424.0
margin_bottom = 30.0
size_flags_horizontal = 3

[node name="delete" parent="Repository/repos_buttons/HBoxContainer2" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 120.0
margin_bottom = 30.0
size_flags_horizontal = 5
text = "DELETE REPO"

[node name="delete2" type="Button" parent="Repository/repos_buttons/HBoxContainer2"]
margin_left = 124.0
margin_right = 250.0
margin_bottom = 30.0
custom_colors/font_color = Color( 1, 0, 0.211765, 1 )
custom_colors/font_color_hover = Color( 1, 0.419608, 0.470588, 1 )
custom_colors/font_color_pressed = Color( 0.337255, 0.0156863, 0.0666667, 1 )
disabled = true
text = "Delete Resource"

[node name="HBoxContainer3" type="HBoxContainer" parent="Repository/repos_buttons"]
margin_left = 434.0
margin_right = 558.0
margin_bottom = 30.0

[node name="commit" type="Button" parent="Repository/repos_buttons/HBoxContainer3"]
margin_right = 124.0
margin_bottom = 30.0
size_flags_horizontal = 6
text = "Commit to Repo"

[node name="HBoxContainer" type="HBoxContainer" parent="Repository/repos_buttons"]
margin_left = 932.0
margin_right = 992.0
margin_bottom = 30.0
size_flags_horizontal = 10
alignment = 2

[node name="reload" type="Button" parent="Repository/repos_buttons/HBoxContainer"]
margin_right = 60.0
margin_bottom = 30.0
text = "reload"

[node name="HSeparator10" type="HSeparator" parent="Repository"]
margin_top = 596.0
margin_right = 992.0
margin_bottom = 600.0
rect_min_size = Vector2( 0, 4 )
custom_styles/separator = SubResource( 4 )

[node name="NewBranch" type="AcceptDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -162.0
margin_top = -60.0
margin_right = 162.0
margin_bottom = 60.0
window_title = "New branch"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="NewBranch"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -154.0
margin_top = -52.0
margin_right = 154.0
margin_bottom = 14.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="NewBranch/VBoxContainer"]
margin_right = 307.0
margin_bottom = 32.0

[node name="Label" type="Label" parent="NewBranch/VBoxContainer/HBoxContainer"]
margin_top = 5.0
margin_right = 96.0
margin_bottom = 27.0
text = "Branch name:"
align = 1

[node name="name" type="LineEdit" parent="NewBranch/VBoxContainer/HBoxContainer"]
margin_left = 100.0
margin_right = 307.0
margin_bottom = 32.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer2" type="HBoxContainer" parent="NewBranch/VBoxContainer"]
margin_top = 36.0
margin_right = 307.0
margin_bottom = 66.0

[node name="Label" type="Label" parent="NewBranch/VBoxContainer/HBoxContainer2"]
margin_top = 4.0
margin_right = 92.0
margin_bottom = 26.0
text = "From branch:"
align = 1

[node name="branch3" type="OptionButton" parent="NewBranch/VBoxContainer/HBoxContainer2"]
margin_left = 183.0
margin_right = 219.0
margin_bottom = 30.0
size_flags_horizontal = 6
size_flags_vertical = 0

[node name="extraction_request" type="WindowDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -219.0
margin_top = -69.0
margin_right = 219.0
margin_bottom = 69.0
window_title = "Archive Extraction"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="extraction_request"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 7.04
margin_right = -8.0
margin_bottom = -15.405
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="extraction_request/VBoxContainer"]
margin_right = 421.0
margin_bottom = 39.0
text = "Would you like to extract all files from the downloaded archive to you project folder?"
align = 1
autowrap = true

[node name="HSeparator" type="HSeparator" parent="extraction_request/VBoxContainer"]
margin_top = 43.0
margin_right = 421.0
margin_bottom = 47.0
custom_styles/separator = SubResource( 19 )

[node name="Label2" type="Label" parent="extraction_request/VBoxContainer"]
margin_top = 51.0
margin_right = 421.0
margin_bottom = 90.0
custom_colors/font_color = Color( 1, 0, 0.141176, 1 )
text = "Always make sure to add to %PATH& Python or Java to make these methods work."
align = 1
autowrap = true

[node name="HSeparator2" type="HSeparator" parent="extraction_request/VBoxContainer"]
margin_top = 94.0
margin_right = 421.0
margin_bottom = 98.0
custom_styles/separator = SubResource( 19 )

[node name="buttons" type="HBoxContainer" parent="extraction_request/VBoxContainer"]
margin_top = 102.0
margin_right = 421.0
margin_bottom = 132.0
custom_constants/separation = 10
alignment = 1

[node name="python" type="Button" parent="extraction_request/VBoxContainer/buttons"]
margin_right = 133.0
margin_bottom = 30.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 1, 0.709804, 0.215686, 1 )
text = "Python extraction"

[node name="java" type="Button" parent="extraction_request/VBoxContainer/buttons"]
margin_left = 143.0
margin_right = 276.0
margin_bottom = 30.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0.921569, 0.215686, 1, 1 )
text = "Java extraction"

[node name="gdscript" type="Button" parent="extraction_request/VBoxContainer/buttons"]
visible = false
margin_left = 143.0
margin_right = 279.0
margin_bottom = 20.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0.0235294, 0, 0.705882, 1 )
text = "GDScript extraction"

[node name="cancel" type="Button" parent="extraction_request/VBoxContainer/buttons"]
margin_left = 286.0
margin_right = 421.0
margin_bottom = 30.0
size_flags_horizontal = 3
text = "Cancel"

[node name="extraction_overwriting" type="ConfirmationDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -185.5
margin_top = -110.0
margin_right = 185.5
margin_bottom = 110.0
window_title = "File Extraction (overwriting files)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="extraction_overwriting"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -177.5
margin_top = -102.0
margin_right = 177.5
margin_bottom = 64.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="extraction_overwriting/VBoxContainer"]
margin_right = 355.0
margin_bottom = 90.0
custom_colors/font_color = Color( 1, 0, 0.0941176, 1 )
text = "The plugin has found some files in your project folder that may be overwritten by the new downloaded files.
Please, check the files you want to overwrite, and leave unchecked the files you don't want to be overwritten."
autowrap = true

[node name="ScrollContainer" type="ScrollContainer" parent="extraction_overwriting/VBoxContainer"]
margin_top = 94.0
margin_right = 355.0
margin_bottom = 166.0
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="file_list" type="ItemList" parent="extraction_overwriting/VBoxContainer/ScrollContainer"]
margin_right = 355.0
margin_bottom = 72.0
size_flags_horizontal = 3
size_flags_vertical = 3
max_columns = 2

[node name="setup_git_lfs" type="ConfirmationDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -226.0
margin_top = -133.5
margin_right = 225.0
margin_bottom = 133.5
window_title = "Stup Git LFS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="setup_git_lfs"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -217.5
margin_top = -125.5
margin_right = 217.5
margin_bottom = 87.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="setup_git_lfs/VBoxContainer"]
margin_right = 435.0
margin_bottom = 39.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "List the file extensions you want to track with git LFS, then press \"OK\" to proceed or \"Cancel\" to end this Setup."
autowrap = true

[node name="whatis" type="LinkButton" parent="setup_git_lfs/VBoxContainer"]
margin_left = 333.0
margin_top = 43.0
margin_right = 435.0
margin_bottom = 57.0
size_flags_horizontal = 8
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "What is Git LFS?"

[node name="extensions_list" type="TextEdit" parent="setup_git_lfs/VBoxContainer"]
margin_top = 61.0
margin_right = 435.0
margin_bottom = 213.0
hint_tooltip = "List the file extensions you want to track with git LFS"
size_flags_vertical = 3
text = "psd
inkscape
mp4
svg"
show_line_numbers = true
wrap_enabled = true

[node name="whatis_dialog" type="WindowDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -201.5
margin_top = -96.0
margin_right = 200.5
margin_bottom = 96.0
window_title = "What is Git LFS?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="whatis_dialog"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -187.0
margin_top = -83.5
margin_right = 188.0
margin_bottom = 32.5
custom_colors/font_color = Color( 1, 0, 0.235294, 1 )
text = "GitHub repositories have a default size limit on files you can upload, which consists of 100MB per file.
If you want to overcome this limit, you have to setup the Git Large Storage extension for your repository.
You don't need to download or set it up manually on your machine. just list the file extension you want to track for your Git LFS, and this plugin will do the rest."
autowrap = true

[node name="learnmore" type="LinkButton" parent="whatis_dialog"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -97.0
margin_top = 69.0
margin_right = 97.0
margin_bottom = 83.0
text = "Learn more about Git LFS here"

[node name="extension_choosing" type="AcceptDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -214.0
margin_top = -55.0
margin_right = 214.0
margin_bottom = 55.0
rect_min_size = Vector2( 0, 95 )
window_title = "Pulling Repository"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="extension_choosing"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -46.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="extension_choosing/VBoxContainer"]
margin_right = 412.0
margin_bottom = 22.0
text = "Choose an extension for the archive containing your repository:"

[node name="extension_option" type="OptionButton" parent="extension_choosing/VBoxContainer"]
margin_top = 26.0
margin_right = 412.0
margin_bottom = 56.0
text = ".zip"
items = [ ".zip", null, false, 0, null, ".tar.gz", null, false, 1, null ]
selected = 0
__meta__ = {
"_edit_lock_": true
}
[connection signal="item_selected" from="Repository/BranchInfo/branch/branch2" to="." method="_on_branch2_item_selected"]
[connection signal="item_activated" from="Repository/contents" to="." method="_on_contents_item_activated"]
[connection signal="multi_selected" from="Repository/contents" to="." method="_on_contents_multi_selected"]
[connection signal="pressed" from="Repository/repos_buttons/HBoxContainer/reload" to="." method="_on_reload_pressed"]
[connection signal="pressed" from="extraction_request/VBoxContainer/buttons/python" to="." method="_on_python_pressed"]
[connection signal="pressed" from="extraction_request/VBoxContainer/buttons/java" to="." method="_on_java_pressed"]
[connection signal="pressed" from="extraction_request/VBoxContainer/buttons/gdscript" to="." method="_on_gdscript_pressed"]
[connection signal="pressed" from="extraction_request/VBoxContainer/buttons/cancel" to="." method="_on_cancel_pressed"]
[connection signal="confirmed" from="extraction_overwriting" to="." method="_on_extraction_overwriting_confirmed"]
[connection signal="confirmed" from="setup_git_lfs" to="." method="_on_setup_git_lfs_confirmed"]
[connection signal="pressed" from="setup_git_lfs/VBoxContainer/whatis" to="." method="_on_whatis_pressed"]
[connection signal="confirmed" from="extension_choosing" to="." method="_on_extension_choosing_confirmed"]
[connection signal="item_selected" from="extension_choosing/VBoxContainer/extension_option" to="." method="_on_extension_option_item_selected"]
